--- a/index.html
+++ b/index.html
@@ -12,6 +12,87 @@
   <body>
 
     <h1>Bài Tập Js Buổi 8</h1>
+
+
+    <div class="container">
+      <div class="form d-flex ">
+        <input type="number" name="" id="txtNhapSo" class="form-control w-50 mx-3">
+        <button class="btn btn-outline-success " onclick="array()">Nhập số</button>
+      </div>
+      <p class="bg-success p-3 w-75 my-2 " id="ketqua"> </p>
+    </div>
+    <div class="container">
+      <h2>Bài 1 :Tổng các số dương trong mảng. </h2>
+      <button class="btn btn-outline-success my-2 " onclick="ex1()" >Tính tổng</button>
+      <p class="bg-success bg-success p-3 w-75 " id="kqbt1"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 2 :Đếm có bao nhiêu số dương trong mảng. </h2>
+      <button class="btn btn-outline-success my-2 " onclick="ex2()" >Đếm số </button>
+      <p class="bg-success bg-success p-3 w-75" id="kqbt2"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 3 :Tìm số nhỏ nhất trong mảng </h2>
+      <button class="btn btn-outline-success my-2 " onclick="ex3()" >Đếm số </button>
+      <p class="bg-success bg-success p-3 w-75" id="kqbt3"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 4 :Tìm số dương nhỏ nhất trong mảng </h2>
+      <button class="btn btn-outline-success my-2 " onclick="ex4()" >Tìm số </button>
+      <p class="bg-success bg-success p-3 w-75" id="kqbt4"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 5 :Tìm số chẵn cuối cùng trong mảng. Nếu mảng không có giá trị chẵn thì trả về -1. </h2>
+      <button class="btn btn-outline-success my-2 " onclick="ex5()" >Tìm  số </button>
+      <p class="bg-success bg-success p-3 w-75" id="kqbt5"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 6 :Đổi chỗ 2 giá trị trong mảng theo vị trí (Cho nhập vào 2 vị trí muốn đổi chỗ giá trị) </h2>
+      
+      <div class="d-flex my-1">
+        <input type="number" id="iso1" class="mr-2" placeholder="nhập số 1">
+        <input type="number" id="iso2" class="mr-2" placeholder="nhập số 2">
+        <button class="btn btn-outline-success  " onclick="ex6()" >Đổi chỗ </button>
+      </div>
+      
+      <p class="bg-success bg-success p-3 w-75" id="kqbt6"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 7 :Sắp xếp mảng theo thứ tự tăng dần </h2>
+      <button class="btn btn-outline-success my-2 " onclick="ex7()" >Sắp Xếp </button>
+      <p class="bg-success bg-success p-3 w-75" id="kqbt7"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 8 :Tìm số nguyên tố đầu tiên trong mảng. Nếu mảng không có số nguyên tố thì trả về – 1 </h2>
+      <button class="btn btn-outline-success my-2 " onclick="ex8()" >Tìm số </button>
+      <p class="bg-success bg-success p-3 w-75" id="kqbt8"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 9 :Đếm số nguyên </h2>
+      <div class="form d-flex ">
+        <input type="number" name="" id="txtNhapSo1" class="form-control w-50 mx-3">
+        <button class="btn btn-outline-success " onclick="array1()">Nhập số</button>
+      </div>
+      <p class="bg-success p-3 w-75 my-2 " id="ketqua1"> </p>
+      <button class="btn btn-outline-success my-2 " onclick="ex9()" >Tìm số </button>
+      <p class="bg-success bg-success p-3 w-75" id="kqbt9"></p>
+    </div>
+    <div class="container">
+      <h2>Bài 10 :So sánh số lượng số âm và số dương </h2>
+      <button class="btn btn-outline-success my-2 " onclick="ex10()" >Tìm  </button>
+      <p class="bg-success bg-success p-3 w-75" id="kqbt10"></p>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
       <script src="./index.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
